--- a/sydney/sydney_lockdown_style.css
+++ b/sydney/sydney_lockdown_style.css
@@ -60,6 +60,11 @@ line.yDeaths {
     opacity: 0.5;
 }
 
+rect.deaths {
+    fill: darkred;
+    opacity: 0.5;
+}
+
 line.x {
     stroke: black;
     stroke-dasharray: 3,3;
